<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/authLayout"
    tools:context=".view.AuthenticateActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/a_l_i_n_e"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/cool_group"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />



    </LinearLayout>

    <TextView
        android:id="@+id/txt_assistor_app"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/looking_for_the_assistor_app"
        android:fontFamily="@font/roboto_light"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textColor="@color/bottomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_above="@id/txt_assistor_app"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in_background"
            android:fontFamily="@font/roboto_light"
            android:id="@+id/btnSignIn"
            android:text="@string/sign_in"
            android:textColor="@android:color/black" />

        <Button
            android:background="@drawable/btn_register_background"
            android:fontFamily="@font/roboto_light"
            android:id="@+id/btnRegister"
            android:textColor="@android:color/black"
            android:text="@string/register"
            android:layout_marginStart="6dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>